--- a/packages/httl-website/src/app/(home)/globals.css
+++ b/packages/httl-website/src/app/(home)/globals.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 :root {
   /* --background: #0a0a0a; */
@@ -10,7 +8,6 @@
 }
 
 html {
-  box-sizing: border-box;
   font-size: 13px;
 }
 
@@ -25,30 +22,4 @@ body {
     'Droid Sans', 'Helvetica Neue', sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ol,
-ul {
-  margin: 0;
-  padding: 0;
-  font-weight: normal;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
 }
