--- a/packages/httl-website/src/app/(home)/globals.css
+++ b/packages/httl-website/src/app/(home)/globals.css
@@ -27,7 +27,10 @@ body {
 }
 
 .pageBG>div {
-  background: radial-gradient(circle at right center, #000000, #81c3af 30%, #12346d 55%, #32517380);
+  /* background: radial-gradient(circle at right center, #000000, #81c3af 30%, #12346d 55%, #32517380); */
+  background: radial-gradient(circle at right center, #000000, #4af3bf 30%, #216ce9 55%, #32517380);
+  opacity: 0.8;
+
   mask-image: radial-gradient(ellipse 300% 30% at center center, #000 20%, #00000080 50%, #0000);
   transform: matrix(1, 0, 4, 3, 0, 60);
   height: 35%;
